@@ -1,0 +1,8 @@
+.. comment: generated by t_class_new_supernfirst_bad
+.. code-block:: sv
+   :linenos:
+   :emphasize-lines: 3
+
+     function new();
+       int x = $random();
+       super.new(build_coverage(x), x);  // <--- BAD, must be first statement
