@@ -1,0 +1,4 @@
+.. comment: generated by t_class_new_supernfirst_bad
+.. code-block::
+
+   %Error-SUPERNFIRST: example.v:1:11 'super.new' must be first statement in a 'function new' (IEEE 1800-2023 8.15)
