@@ -6337,6 +6337,33 @@ class WidthVisitor final : public VNVisitor {
                 nodep->v3error("class 'new()' cannot be virual (IEEE 1800-2023 18.3)");
             if (nodep->isStatic())
                 nodep->v3error("class 'new()' cannot be static (IEEE 1800-2023 18.3)");
+            AstNode* firstp = nullptr;
+            for (AstNode* itemp = nodep->stmtsp(); itemp; itemp = itemp->nextp()) {
+                if (AstStmtExpr* const sep = VN_CAST(itemp, StmtExpr)) {
+                    if (AstNew* const newp = VN_CAST(sep->exprp(), New)) {
+                        if (firstp) {
+                            UINFOTREE(1, firstp, "", "-earlier");
+                            newp->v3warn(SUPERNFIRST,
+                                         "'super.new' must be first statement in a 'function "
+                                         "new' (IEEE 1800-2023 8.15)\n"
+                                             << newp->warnContextPrimary() << '\n'
+                                             << firstp->warnOther()
+                                             << "... Location of earlier statement\n"
+                                             << firstp->warnContextSecondary());
+                            break;
+                        }
+                    }
+                    continue;
+                }
+                if (AstVar* const varp = VN_CAST(itemp, Var)) {
+                    if (!varp->valuep() || VN_CAST(varp->valuep(), Const) || varp->isIO())
+                        continue;
+                }
+                if (AstAssign* const aitemp = VN_CAST(itemp, Assign)) {
+                    if (VN_IS(aitemp->rhsp(), Const)) continue;
+                }
+                firstp = itemp;
+            }
         }
         // Function hasn't been widthed, so make it so.
         // Would use user1 etc, but V3Width called from too many places to spend a user
