@@ -1,0 +1,9 @@
+%Error-SUPERNFIRST: t/t_class_new_supernfirst_bad.v:20:11: 'super.new' must be first statement in a 'function new' (IEEE 1800-2023 8.15)
+                                                         : ... note: In instance 't'
+   20 |     super.new(build_coverage(x), x);   
+      |           ^~~
+                    t/t_class_new_supernfirst_bad.v:19:13: ... Location of earlier statement
+   19 |     int x = $random();
+      |             ^~~~~~~
+                    ... For error description see https://verilator.org/warn/SUPERNFIRST?v=latest
+%Error: Exiting due to
